5-Metrics-Prometheus/prometheus-on-call/manifests/on-call/service-oncall-notifier.yml
---
apiVersion: v1
kind: Service
metadata:
  name: oncall-notifier
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: oncall-notifier
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
