5-Metrics-Prometheus/prometheus-on-call/manifests/on-call/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: oncall
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: oncall
  ports:
    - name: "oncal"
      protocol: TCP
      port: 8080
      targetPort: 8080
    # notifier
    # - name: "notifier"
    #   protocol: TCP
    #   port: 9091
    #   targetPort: 9091
